--- a/geoContrast.html
+++ b/geoContrast.html
@@ -13,7 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" type="text/css" href="assets/js/slick/slick.css" />
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<link rel="stylesheet" href="assets/css/extra.css" />
+	<link rel="stylesheet" href="assets/css/geoContrast.css" />
 	<link rel="stylesheet" href="assets/css/BeerSlider.css" />
 		
 	<!-- Scripts -->
