--- a/geoContrastCountries.html
+++ b/geoContrastCountries.html
@@ -115,8 +115,8 @@
                                                 <option value="maxYear">Latest Year</option>
                                             </select>
                                         </div>
-                                        <br>
-                                        <div style="width:100%">
+                                        <span style="font-size:0.7em">Description goes here...</span>
+                                        <div style="width:100%; margin-top:10px">
                                             <div id="map-legend" style="margin-left:20%">
                                             </div>
                                         </div>
