Fix map box alignment issue + mobile

--- a/geoContrast.html
+++ b/geoContrast.html
@@ -74,8 +74,8 @@
 						<span><h1>Visualize & Compare Boundaries</h1></span>
 					</header>
 
-					<div id="map-and-toolbox-div" class="row gtr-200">
-						<div class="col-7 col-12-medium">
+					<div id="map-and-toolbox-div" class="row" style="width:100%; margin-left:0; margin-bottom:25px">
+						<div class="col-7 col-12-medium" style="padding-left:0">
 							<div id="fullscreen" class="fullscreen">
 								<div id="map" class="map">
 								</div>
