Reverse countries color categories and legend

--- a/geoContrastCountries.html
+++ b/geoContrastCountries.html
@@ -117,7 +117,7 @@
                                         </div>
                                         <span style="font-size:0.7em">Description goes here...</span>
                                         <div style="width:100%; margin-top:10px">
-                                            <div id="map-legend" style="margin-left:20%">
+                                            <div id="map-legend" style="margin-left:20%; display:flex; flex-direction:column-reverse;">
                                             </div>
                                         </div>
                                         
