--- a/geoContrastCountries.html
+++ b/geoContrastCountries.html
@@ -89,7 +89,7 @@
 								
 									<ul class='etabs'>
 										<li class='tab'><a href="geoContrast.html">Compare Boundaries</a></li>
-										<li class='tab'><a href="geoContrastCountries.html">Compare Countries</a></li>
+										<li class='tab active'><a href="geoContrastCountries.html">Compare Countries</a></li>
 									</ul>
 									
 									<div id="countries" class="box" style="font-size:14pt; height:575px">
