Dropdown to filter by boundary collection

--- a/geoContrast.html
+++ b/geoContrast.html
@@ -111,7 +111,7 @@
 												</select>
 											</div>
 											<div id="gb-file-div" style="padding-top:5px">
-												<span class="fas fa-file" style="padding:0px 3px important!; width:auto">
+												<span class="fas fa-file" style="padding:0px 3px important!; margin-left:10px; width:auto">
 													<input id="gb-file-input" class="fas" type="file" accept=".geojson,.zip">
 												</span>
 												<span data-text="Upload a zipped shapefile, geoJSON or topoJSON.  Expects WGS84 (EPSG 4326)." class="tooltip">
@@ -139,7 +139,7 @@
 												</select>
 											</span>
 											<div id="comparison-file-div">
-												<span class="fas fa-file" style="padding:0px 3px important!; width:auto">
+												<span class="fas fa-file" style="padding:0px 3px important!; margin-left:10px; width:auto">
 													<input id="comparison-file-input" class="fas" type="file" accept=".geojson,.zip" onchange="handleComparisonFileUpload(this)">
 												</span>
 												<span data-text="Upload a zipped shapefile, geoJSON or topoJSON.  Expects WGS84 (EPSG 4326)." class="tooltip">
