--- a/geoContrastCountries.html
+++ b/geoContrastCountries.html
@@ -96,7 +96,13 @@
 									
                                         <div style="padding:15px">
 
-                                        <div class="row">
+											<div class="row" style="margin-top:10px">
+												<span>Boundary Collection:</span>
+												<select id='collection' style="margin-left:20px" onchange="updateCountriesTable(); updateMapCountries()">
+												</select>
+											</div>
+
+											<div class="row" style="margin-top:10px">
                                             <span>Administrative level:</span>
                                             <select id='admin-level' style="margin-left:20px" onchange="updateCountriesTable(); updateMapCountries()">
                                                 <option value="ADM0">ADM0</option>
@@ -107,8 +113,8 @@
                                                 <option value="ADM5">ADM5</option>
                                             </select>
                                         </div>
-                                        <br>
-                                        <div class="row">
+
+                                        <div class="row" style="margin-top:10px">
                                             <span>Compare:</span>
                                             <select id='map-compare' style="margin-left:20px" onchange="updateCountriesTable(); updateMapCountries()">
                                             </select>
