--- a/geoContrastCountries.html
+++ b/geoContrastCountries.html
@@ -98,13 +98,13 @@
 
 											<div class="row" style="margin-top:10px">
 												<span>Boundary Collection:</span>
-												<select id='collection' style="margin-left:20px" onchange="updateCountriesTable(); updateMapCountries()">
+												<select id='collection' style="margin-left:20px" onchange="updateGetParams(); updateCountriesTable(); updateMapCountries()">
 												</select>
 											</div>
 
 											<div class="row" style="margin-top:10px">
                                             <span>Administrative level:</span>
-                                            <select id='admin-level' style="margin-left:20px" onchange="updateCountriesTable(); updateMapCountries()">
+                                            <select id='admin-level' style="margin-left:20px" onchange="updateGetParams(); updateCountriesTable(); updateMapCountries()">
                                                 <option value="ADM0">ADM0</option>
                                                 <option value="ADM1" selected>ADM1</option>
                                                 <option value="ADM2">ADM2</option>
@@ -116,7 +116,7 @@
 
                                         <div class="row" style="margin-top:10px">
                                             <span>Compare:</span>
-                                            <select id='map-compare' style="margin-left:20px" onchange="updateCountriesTable(); updateMapCountries()">
+                                            <select id='map-compare' style="margin-left:20px" onchange="updateGetParams(); updateCountriesTable(); updateMapCountries()">
                                             </select>
                                         </div>
                                         <p id="map-description" style="font-size:0.7em; padding:0; margin:20px 10px">Description goes here...</p>
