--- a/downloadCGAZ.html
+++ b/downloadCGAZ.html
@@ -136,7 +136,10 @@
 
 					<hr class="major" />
 					<h2>Download CGAZ</h2>
+					<div style="background-color:#d8ebf1; margin:2em 0 !important; padding:1em; ">
 <p><b>Uses of this data require <a href="index.html#citation">acknowledgement</a></b></p>
+<p>Please note that CGAZ is built once with each release.  The current version of CGAZ is built using geoBoundaries 4.0.</p>
+</div>
 
 
 
