Update CGAZ links

--- a/downloadCGAZ.html
+++ b/downloadCGAZ.html
@@ -124,7 +124,7 @@
 
 						</div>
 						<div class="col-6 col-12-medium">
-							<blockquote>Our single-file global products are heavily simplified, as contrasted to our
+							<blockquote>Our single-file global products are heavily simplified and gap filled, as contrasted to our
                                 <a href="https://www.geoboundaries.org/index.html#getdata">full resolution single-country products</a>.
 								Today, these global products are simplified to only include 10% of the original data - i.e., 90%
                                 of points along borders are removed. Examples of the difference between resolutions can be seen to 
@@ -154,21 +154,21 @@
 											</tr>
 											<tr>
 												<td>ADM0</td>
-												<td><a href="https://www.geoboundaries.org/data/geoBoundariesCGAZ-3_0_0/ADM0/simplifyRatio_25/geoBoundariesCGAZ_ADM0.geojson"><i class='fa fa-download'></i>70MB</a></td>
-												<td><a href="https://www.geoboundaries.org/data/geoBoundariesCGAZ-3_0_0/ADM0/simplifyRatio_25/geoBoundariesCGAZ_ADM0.topojson"><i class='fa fa-download'></i>12MB</a></td>
-												<td><a href="https://www.geoboundaries.org/data/geoBoundariesCGAZ-3_0_0/ADM0/simplifyRatio_25/shp/"><i class='fa fa-download'></i>29MB</a></td>
+												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.geojson"><i class='fa fa-download'></i>379MB</a></td>
+												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.topojson"><i class='fa fa-download'></i>54MB</a></td>
+												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM0.zip"><i class='fa fa-download'></i>99MB</a></td>
 											</tr>
 											<tr>
 												<td>ADM1</td>
-												<td><a href="https://www.geoboundaries.org/data/geoBoundariesCGAZ-3_0_0/ADM1/simplifyRatio_25/geoBoundariesCGAZ_ADM1.geojson"><i class='fa fa-download'></i>130MB</a></td>
-												<td><a href="https://www.geoboundaries.org/data/geoBoundariesCGAZ-3_0_0/ADM1/simplifyRatio_25/geoBoundariesCGAZ_ADM1.topojson"><i class='fa fa-download'></i>20MB</a></td>
-												<td><a href="https://www.geoboundaries.org/data/geoBoundariesCGAZ-3_0_0/ADM1/simplifyRatio_25/shp/"><i class='fa fa-download'></i>54MB</a></td>
+												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.geojson"><i class='fa fa-download'></i>373MB</a></td>
+												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.topojson"><i class='fa fa-download'></i>55MB</a></td>
+												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM1.zip"><i class='fa fa-download'></i>109MB</a></td>
 											</tr>
 											<tr>
 												<td>ADM2</td>
-												<td><a href="https://www.geoboundaries.org/data/geoBoundariesCGAZ-3_0_0/ADM2/simplifyRatio_25/geoBoundariesCGAZ_ADM2.geojson"><i class='fa fa-download'></i>264MB</a></td>
-												<td><a href="https://www.geoboundaries.org/data/geoBoundariesCGAZ-3_0_0/ADM2/simplifyRatio_25/geoBoundariesCGAZ_ADM2.topojson"><i class='fa fa-download'></i>73MB</a></td>
-												<td><a href="https://www.geoboundaries.org/data/geoBoundariesCGAZ-3_0_0/ADM2/simplifyRatio_25/shp/"><i class='fa fa-download'></i>122MB</a></td>
+												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.geojson"><i class='fa fa-download'></i>655MB</a></td>
+												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.topojson"><i class='fa fa-download'></i>106MB</a></td>
+												<td><a href="https://github.com/wmgeolab/geoBoundaries/raw/main/releaseData/CGAZ/geoBoundariesCGAZ_ADM2.zip"><i class='fa fa-download'></i>185MB</a></td>
 											</tr>
 										</tbody>
 									</table>
