--- a/geoContrast.html
+++ b/geoContrast.html
@@ -900,7 +900,7 @@
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
 	<script src="assets/js/jquery.easytabs.js" type="text/javascript"></script>
-	<script type="text/javascript" src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 	<script src="assets/js/papaparse.min.js"></script>
 
 
