--- a/devIndex.html
+++ b/devIndex.html
@@ -455,7 +455,7 @@ L.tileLayer(
 				<section id="banner">
 					<div class="content" id="sponsors">
 						<header>
-							<h1>Partners & Sponsors</h1>
+							<h1>Partners, Sponsors & Contributors</h1>
 							<p>Thanks to our partners, sponsors, and <a href="https://github.com/wmgeolab/geoBoundaries/graphs/contributors">community of contributors</a> for making geoBoundaries possible. </p>
 						</header>
 					
