--- a/devIndex.html
+++ b/devIndex.html
@@ -396,7 +396,7 @@ L.tileLayer(
 						<img src="images/samerica.jpg" alt="" />
 					</span>
 				</section>
-
+<!---
 				<section id="banner">
 					<div class="content" id="sponsors">
 						<header>
@@ -416,13 +416,16 @@ L.tileLayer(
 										src="images/ciesin_grid3_logo.png" alt=""></div>
 								<div><img style="max-height:90px;max-width:300px;height:auto;width:auto;"
 										src="images/wm.png" alt=""></div>
+								<div><img style="max-height:90px;max-width:300px;height:auto;width:auto;"
+											src="images/unsalblogo.jpg" alt=""></div>
+										
 							</div>
 
 						</span>
 					</div>
 				</section>
 
-
+-->
 			</div>
 		</div>
 
