Add open source to intro

--- a/devIndex.html
+++ b/devIndex.html
@@ -102,12 +102,11 @@
 							<p>The world's largest open, free and research-ready database of political administrative
 								boundaries.</p>
 						</header>
-						<p>Produced and maintained by the William & Mary <a href="http://geolab.wm.edu">geoLab</a> since
-							2017, the geoBoundaries Global Database of Political Administrative Boundaries Database is
-							an online, open license resource of boundaries (i.e., state, county) for every country in
+						<p>Produced and maintained by the William & Mary <a href="http://geolab.wm.edu">geoLab</a> and 
+							<a href="https://github.com/wmgeolab/geoBoundaries/graphs/contributors">open source community</a> since	2017, the geoBoundaries Global Database of Political Administrative 
+							Boundaries Database is an online, open license resource of boundaries (i.e., state, county) for every country in
 							the world. We currently track approximately 1 million boundaries within over 200 entities,
-							including all 195 UN member states.
-							All boundaries are available to view or download in common file formats, including
+							including all 195 UN member states. All boundaries are available to view or download in common file formats, including
 							shapefiles;
 							the only requirement for use is <a href="index.html#citation">acknowledgement</a>.</p>
 						<ul class="actions">
