--- a/devIndex.html
+++ b/devIndex.html
@@ -64,6 +64,10 @@
 		.salbHighlight {
 			background-color: #becdffa9 !important;
 		}
+
+		.greyHighlight {
+			background-color: rgba(238, 238, 238, 0.33)!important;
+		}
 	</style>
 
 
@@ -239,22 +243,24 @@
 						var tableA = new Tabulator("#dataTableRep", {
 							ajaxURL: "https://www.geoboundaries.org/api/index.json", //ajax URL
 							height: screen.height * 0.60,
-							layout: "fitDataFill",
+							layout: "fitDataTable",
+							width:100,
+							autoResize:false,
 							resizableColumns: true,
-							responsiveLayout: true,
+							responsiveLayout: "collapse",
 							groupBy: ["Continent", "boundaryName"],
 							//autoColumns:true,
 							columns: [                 //define the table columns
-								{ title: "Name", field: "boundaryName", visible: true, responsive: 0, headerFilter: 'input', width: "20px", headerVertical: false },
-								{ title: "ISO-3", field: "ISO", visible: true, responsive: 0, headerFilter: 'input', width: "10px", headerVertical: false },
-								{ title: "Level", field: "ADM", visible: true, responsive: 0, headerVertical: false },
+								{ title: "Name", cssClass:"greyHighlight", field: "boundaryName", visible: true, responsive: 0, headerFilter: 'input', width: "20px", headerVertical: false },
+								{ title: "ISO-3", cssClass:"greyHighlight",field: "ISO", visible: true, responsive: 0, headerFilter: 'input', width: "10px", headerVertical: false },
+								{ title: "Level", cssClass:"greyHighlight",field: "ADM", visible: true, responsive: 0, headerVertical: false },
 								{
 									title: "geoBoundaries",
 									cssClass: "openHighlight",
 									columns: [
 										{ formatter: downloadSingleIcon, cssClass: "openHighlight", title: "Full Release", align: "center", field: "openDownloadURL", headerVertical: true, responsive: 0, cellClick: function (e, cell) { window.open(encodeURI(cell.getRow().getData()["openDownloadURL"].replace("https://g", "https://www.g"))) } },
 										{ formatter: downloadSimpleIcon, cssClass: "openHighlight", title: "Simplified geoJSON", field: "openSimplified", align: "center", visible: false, headerVertical: true, responsive: 0, cellClick: function (e, cell) { window.open(encodeURI(cell.getRow().getData()["openSimplified"].replace("https://g", "https://www.g"))) } },
-										{ title: "Year Represented", cssClass: "openHighlight", field: "openBoundaryYearRepresented", headerVertical: true, },
+										{ title: "Year Represented", cssClass: "openHighlight", width:"4px", field: "openBoundaryYearRepresented", headerVertical: true, },
 										{ title: "Image Preview", cssClass: "openHighlight", field: "openPreview", formatter: iconFormatter, visible: true, variableHeight: true, headerVertical: true, },
 										{ formatter: interactivePreview, cssClass: "openHighlight", title: "Interactive Preview", field: "openSimpInteractive", align: "center", headerVertical: true, responsive: 0, headerVertical: true, cellClick: function (e, cell) { window.open(encodeURI(cell.getRow().getData()["openSimpInteractive"])) } },
 										{ title: "Primary Source", cssClass: "openHighlight", field: "openBoundarySource-1", headerVertical: true, responsive: 1, width: "30%", visible: false },
@@ -267,9 +273,9 @@
 									columns: [
 										{ formatter: downloadSingleIcon, title: "Full Release", align: "center", field: "humDownloadURL", headerVertical: true, responsive: 0, visible: true, cssClass: "ochaHighlight", cellClick: function (e, cell) { window.open(encodeURI(cell.getRow().getData()["humDownloadURL"].replace("https://g", "https://www.g"))) } },
 										{ formatter: downloadSimpleIcon, title: "Simplified geoJSON", field: "humSimplified", align: "center", headerVertical: true, responsive: 0, visible: false, cssClass: "ochaHighlight", cellClick: function (e, cell) { window.open(encodeURI(cell.getRow().getData()["humSimplified"].replace("https://g", "https://www.g"))) } },
-										{ title: "Year Represented", field: "humBoundaryYearRepresented", headerVertical: true, visible: true, cssClass: "ochaHighlight" },
+										{ title: "Year Represented", field: "humBoundaryYearRepresented", width:"4px", headerVertical: true, visible: true, cssClass: "ochaHighlight" },
 										{ title: "Image Preview", field: "humPreview", formatter: iconFormatter, visible: true, visible: true, variableHeight: true, headerVertical: true, cssClass: "ochaHighlight" },
-										{ formatter: interactivePreview, title: "Interactive Preview", field: "humSimpInteractive", visible: true, align: "center", cssClass: "ochaHighlight", headerVertical: true, responsive: 0, headerVertical: true, cellClick: function (e, cell) { window.open(encodeURI(cell.getRow().getData()["openSimpInteractive"])) } },
+										{ formatter: interactivePreview, title: "Interactive Preview", field: "humSimpInteractive", visible: false, align: "center", cssClass: "ochaHighlight", headerVertical: true, responsive: 0, headerVertical: true, cellClick: function (e, cell) { window.open(encodeURI(cell.getRow().getData()["openSimpInteractive"])) } },
 										{ title: "Primary Source", field: "humBoundarySource-1", headerVertical: true, responsive: 1, visible: false, width: "30%", cssClass: "ochaHighlight", visible: false },
 										{ title: "License", field: "humBoundaryLicense", headerVertical: true, responsive: 1, width: "30%", visible: false, cssClass: "ochaHighlight", visible: false },
 									],
@@ -279,7 +285,7 @@
 									cssClass: "salbHighlight",
 									columns: [
 										{ formatter: downloadSingleIcon, cssClass: "salbHighlight", title: "Full Release", align: "center", field: "authDownloadURL", headerVertical: true, visible: true, responsive: 0, cellClick: function (e, cell) { window.open(encodeURI(cell.getRow().getData()["authDownloadURL"].replace("https://g", "https://www.g"))) } },
-										{ title: "Year Represented", cssClass: "salbHighlight", field: "authBoundaryYearRepresented", visible: true, responsive: 1, headerVertical: true, },
+										{ title: "Year Represented", cssClass: "salbHighlight", width:"4px", field: "authBoundaryYearRepresented", visible: true, responsive: 1, headerVertical: true, },
 										{ title: "Image Preview", cssClass: "salbHighlight", field: "authPreview", formatter: iconFormatter, responsive: 0, visible: true, visible: true, variableHeight: true, headerVertical: true, },
 										{ title: "Primary Source", cssClass: "salbHighlight", field: "authBoundarySource-1", headerVertical: true, responsive: 1, visible: false, width: "30%", visible: false },
 										{ title: "License", cssClass: "salbHighlight", field: "authBoundaryLicense", headerVertical: true, responsive: 1, visible: false, width: "30%", visible: false },
