Allow jpg screenshots, poke/wakeup the backend server in advance

--- a/gbContribute.html
+++ b/gbContribute.html
@@ -199,7 +199,7 @@
                                             <td>License Screenshot:</td>
                                             <td>
                                                 <span class="fas fa-file" style="padding:0px 3px important!; margin-left:10px; width:auto">
-                                                    <input name="license_screenshot" class="fas" type="file" accept="image/png">
+                                                    <input name="license_screenshot" class="fas" type="file" accept="image/png, image/jpeg">
                                                 </span>
                                             </td>
                                         </tr>
